--- a/notes/datasets.Rmd
+++ b/notes/datasets.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Datasets and platform"
+title: "Datasets and platforms"
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: pdf_document
 ---
